# pjecz-lira-cli-typer

./: .gitignore  README.md  main.py  pyproject.toml
pjecz_lira_cli_typer/: videos_watcher.py
